--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DEBUG_ENV=0
 SECRET_KEY=django-insecure-iufp3iw&xxolp^tbu(wsjjqi9z_x&ldmn&t&kd+tzem%02b$%c
-DJANGO_ALLOWED_HOSTS=localhost 0.0.0.0 127.0.0.1 192.168.1.18 .mystore.fun
+DJANGO_ALLOWED_HOSTS=localhost 0.0.0.0 46.105.28.228 .mystore.fun
 
 DB_USER=nesssery
 DB_PASSWORD=7107@-PythonSwift@-7107
